roles/traefik_gateway/files/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik-gw-class
spec:
  controllerName: traefik.io/gateway-controller
