roles/traefik_gateway/files/traefik-controller.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: traefik
  namespace: traefik-system
spec:
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      serviceAccountName: traefik-controller
      containers:
        - name: traefik
          image: registry.local:5000/traefik:v3.4.1
          args:
            - --providers.kubernetesgateway=true
            - --providers.kubernetesgateway
            - --entrypoints.web.address=:80
            - --entrypoints.websecure.address=:443
            - --log.level=info
            - --accesslog
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
