roles/traefik_gateway/files/test-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami
  namespace: default
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: default
  rules:
  - backendRefs:
    - name: whoami
      kind: Service
      port: 80
